examples/error-struct-field-after-fun.co
type Thing {
  x int
  fun get_x(this) u32 { .x }
  y int // error: fields cannot be defined after type functions
}
